# qingque-gamba

./: .gitignore  .gitmodules  LICENSE  README.md  config.toml.example  crowdin.yml  entrypoint.py  pyproject.toml
cogs/: __init__.py  admin.py  helps.py  persistent.py  profiles.py  rewards.py
i18n/de-DE/: commands.json  common.json  generator.json  profiles.json
i18n/en-US/: commands.json  generator.json  helps.json  profiles.json
i18n/es-ES/: common.json  generator.json  helps.json  profiles.json
i18n/fr-FR/: commands.json  common.json  generator.json  helps.json  profiles.json
i18n/id-ID/: commands.json  common.json  errors.json  generator.json  profiles.json
i18n/it-IT/: common.json
i18n/ja-JP/: commands.json  common.json  errors.json  generator.json  profiles.json
i18n/ko-KR/: commands.json  common.json  errors.json  generator.json  profiles.json
i18n/pt-PT/: commands.json  common.json  generator.json  profiles.json
i18n/ru-RU/: common.json  generator.json  helps.json  profiles.json
i18n/th-TH/: commands.json  common.json  generator.json  helps.json  profiles.json
i18n/vi-VN/: commands.json  common.json  errors.json  generator.json  profiles.json
i18n/zh-CN/: common.json  generator.json  profiles.json
i18n/zh-TW/: commands.json  common.json  generator.json  profiles.json
qingque/: __init__.py  bot.py  emojis.py  i18n.py  march7th.py  redisdb.py  tooling.py  utils.py
qingque/assets/: relic_scores.json
qingque/cli/: __init__.py  bot.py  generator.py  march7th.py
qingque/extensions/: files.py
qingque/hylab/: __init__.py  client.py  constants.py  ds.py  interceptor.py
qingque/hylab/models/: __init__.py  base.py  characters.py  common.py  errors.py  forgotten_hall.py  notes.py  overview.py  simuniverse.py
qingque/mihomo/: __init__.py  client.py
qingque/mihomo/models/: __init__.py  base.py  characters.py  combats.py  constants.py  helper.py  player.py  relics.py  simuniverse.py  stats.py  weapons.py
qingque/models/: __init__.py  account_select.py  config.py  confirm.py  embed_paging.py  persistence.py  region.py
qingque/starrail/: __init__.py  caching.py  fuqing.py  generator.py  imaging.py  loader.py  scoring.py
qingque/starrail/generator/: __init__.py  base.py  characters.py  chronicles.py  mihomo.py  mixins.py  moc.py  player.py  simuniverse.py
qingque/starrail/models/: __init__.py  achievements.py  avatars.py  base.py  characters.py  items.py  others.py  relics.py  rogues.py  stats.py  weapons.py
